2005-01-04  Al Riddoch  <alriddoch@zepler.org>

	* eris.spec.in: Remove explicit dependency on Atlas-C++06, and let
	  automatic dependencies handle it.

2005-01-04  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.10, Interface version 11.

2006-01-04  James Turner  <james@worldforge.org>

	* Eris/Timeout.cpp: fix a crash when timeouts are cancelled - need to
	  unregister from the timed event service

2006-01-04  James Turner  <james@worldforge.org>

	* Eris/TimedEventService.cpp: remove an over-zealous assert

2006-01-04  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment interface version.

	* test/avatarTest.h, test/calendarTest.h: Add missing newlines to ends
	  of files.

2006-01-03  James Turner  <james@worldforge.org>

	* Eris/Response.cpp: fix a missing return identified by Al
	
2006-01-03  James Turner  <james@worldforge.org>

	* test/Makefile.am: fix building of tests with auto-tools

2006-01-03  James Turner  <james@worldforge.org>

	* Eris/Alarm.h: add some missing sigc++ includes that broke client
	  compilation.

2006-01-03  James Turner  <james@worldforge.org>

	* Eris/Alarm.cpp, Eris/Alarm.h, Eris/Makefile.am: add an Alarm class, like
	  a timeout but always expires.
	  
	* Eris/Entity.cpp, Eris/View.cpp, Eris/Entity.h: use Alarm to make
	  appearance followed by sight(create) emit the EntityCreated signal.

	* test/viewTest.cpp: enable the final part of the entity create test,
	  now the code is in place.

2006-01-03  James Turner  <james@worldforge.org>

	* Eris/Makefile.am, Eris/TimedEventService.cpp, Eris/TimedEventService.h:
	  new generic code to handle timed events - this replaces most of the old
	  Timeout code, and also enabled single-short timers.
	  
	* Eris/Timeout.cpp, Eris/Timeout.h: remove all the complex code in this
	  class, since the critical work is now done by the TimedEventService.

	* Eris/Poll.h, Eris/PollDefault.cpp: updates to work with the changes to
	  timed events.
